fix: добавить swagger
